- Fix admin management
- Show all ticket excpet deleted ones

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -91,7 +91,8 @@
     "addFreeChild": "إضافة طفل أقل من 4 سنوات مجانا وبدون سرير",
     "reservationType": "نوع الحجز",
     "lastUpdate": "أخر تحديث",
-    "booking": "حجز"
+    "booking": "حجز",
+    "editMessage": "انت علي وشك تغيير نوع الحجز. برجاء مراعاة أن عدد المشتركين يعتمد على نوع الحجز الجديد. قد تحتاج إلى إضافة أو حذف البعض منهم بناءً على اختيارك"
   },
   "languages": {
     "arabic": "العربية",
