--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -92,7 +92,7 @@
     "reservationType": "نوع الحجز",
     "lastUpdate": "أخر تحديث",
     "booking": "حجز",
-    "editMessage": "انت علي وشك تغيير نوع الحجز. برجاء مراعاة أن عدد المشتركين يعتمد على نوع الحجز الجديد. قد تحتاج إلى إضافة أو حذف البعض منهم بناءً على اختيارك"
+    "editMessage": "برجاء مراعاة أن عدد المشتركين يعتمد على نوع الحجز. قد تحتاج إلى إضافة أو حذف البعض منهم بناءً على اختيارك"
   },
   "languages": {
     "arabic": "العربية",
