Updates in price and bed

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -88,6 +88,8 @@
     "triple": "غرفة ثلاثية",
     "quad": "غرفة رباعية",
     "childrenNotes": "يمكن إحضار الأطفال تحت سن 4 سنوات مجانا، لكن ليس لهم سرير ولا وجبات",
+    "childrenNoteOne": "الاطفال اكبر من 4 سنوات واصغر من 8 سنوات يحتسب نصف اشتراك",
+    "childrenNoteTwo": "الاطفال اكبر من 8 سنوات يحتسب اشتراك كامل",
     "addFreeChild": "إضافة طفل أقل من 4 سنوات مجانا وبدون سرير",
     "reservationType": "نوع الحجز",
     "lastUpdate": "أخر تحديث",
