--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -76,7 +76,7 @@
     "all": "الكل",
     "birthDateMonth": "عيد الميلاد",
     "ageRange": "الفئة العمرية",
-    "lastUpdateDate": "التاريخ",
+    "lastUpdateDate": "تاريخ أخر تحديث",
     "lastUpdatedBy": "بواسطة",
     "send": "إرسال",
     "ok": "موافق",
