--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -119,7 +119,9 @@
     "name": "اسم الغرفة",
     "type": "نوع الغرفة",
     "rest": "الباقي",
-    "single": "حجز فرد"
+    "single": "حجز فرد",
+    "singleMale": "حجز فرد (أولاد)",
+    "singleFemale": "حجز فرد (بنات)"
   },
   "bus": {
     "add": "إضافة أتوبيس"
