--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -95,7 +95,9 @@
     "lastUpdate": "أخر تحديث",
     "booking": "حجز",
     "editMessage": "برجاء مراعاة أن عدد المشتركين يعتمد على نوع الحجز. قد تحتاج إلى إضافة أو حذف البعض منهم بناءً على اختيارك",
-    "emptyData": "لا توجد بيانات"
+    "emptyData": "لا توجد بيانات",
+    "primaryMember": "المشترك الرئيسي",
+    "withoutBed": "بدون سرير"
   },
   "languages": {
     "arabic": "العربية",
